--- a/index.html
+++ b/index.html
@@ -304,13 +304,13 @@
         <h1 class="heading">customer's <span>review</span></h1>
         <div class="box-container">
             <div class="box">
-                <img src="/image/quote2.jpg" class="quote" alt="">
+                <img src="image/quote2.jpg" class="quote" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus debitis tempore, totam maxime est
                     natus
                     molestias qui. Maxime earum, ipsum, voluptas, assumenda consectetur saepe labore possimus beatae
                     quae
                     recusandae vel.</p>
-                <img src="/image/women1.jpg" class="user" alt="">
+                <img src="image/women1.jpg" class="user" alt="">
                 <h3>Letty</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -321,13 +321,13 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/image/quote2.jpg" class="quote" alt="">
+                <img src="image/quote2.jpg" class="quote" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus debitis tempore, totam maxime est
                     natus
                     molestias qui. Maxime earum, ipsum, voluptas, assumenda consectetur saepe labore possimus beatae
                     quae
                     recusandae vel.</p>
-                <img src="/image/men1.jpg" class="user" alt="">
+                <img src="image/men1.jpg" class="user" alt="">
                 <h3>smith</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
