--- a/index.html
+++ b/index.html
@@ -338,13 +338,13 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/image/quote2.jpg" class="quote" alt="">
+                <img src="image/quote2.jpg" class="quote" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus debitis tempore, totam maxime est
                     natus
                     molestias qui. Maxime earum, ipsum, voluptas, assumenda consectetur saepe labore possimus beatae
                     quae
                     recusandae vel.</p>
-                <img src="/image/men2.jpg" class="user" alt="">
+                <img src="image/men2.jpg" class="user" alt="">
                 <h3>david</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -401,7 +401,7 @@
         <div class="box-container">
             <div class="box">
                 <div class="image">
-                    <img src="/image/blogs1.jpg" alt="">
+                    <img src="image/blogs1.jpg" alt="">
                 </div>
                 <div class="content">
                     <a href="#" class="title">tasty and refreshing coffee</a>
@@ -412,7 +412,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="/image/blogs2.jpg" alt="">
+                    <img src="image/blogs2.jpg" alt="">
                 </div>
                 <div class="content">
                     <a href="#" class="title">tasty and refreshing coffee</a>
@@ -423,7 +423,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="/image/blogs3.jpg" alt="">
+                    <img src="image/blogs3.jpg" alt="">
                 </div>
                 <div class="content">
                     <a href="#" class="title">tasty and refreshing coffee</a>
