--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
         <nav class="navbar">
             <a href="#Home">Home</a>
-            <a href="#About">About</a>
-            <a href="#Menu">Menu</a>
-            <a href="#Products">Products</a>
-            <a href="#Review">Review</a>
-            <a href="#Contact">Contact</a>
-            <a href="#Blogs">Blogs</a>
+            <a href="#about">About</a>
+            <a href="#menu">Menu</a>
+            <a href="#product">Products</a>
+            <a href="#review">Review</a>
+            <a href="#contact">Contact</a>
+            <a href="#blogs">Blogs</a>
         </nav>
 
         <div class="icon">
