fixed the cart or search  bug

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
 
         <nav class="navbar">
-            <a href="#Home">Home</a>
+            <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#menu">Menu</a>
             <a href="#product">Products</a>
@@ -36,7 +36,8 @@
         </div>
 
         <div class="search-form">
-            <input type="search" id="search-bar" placeholder=""><label for="search-box" class="fas fa-search"></label>
+            <input type="search" id="search-bar" placeholder="search here....">
+            <label for="search-box" class="fas fa-search"></label>
         </div>
 
         <div class="cart-items-container">
